[gd_scene load_steps=3 format=3 uid="uid://0dr0tuufq6ga"]

[ext_resource type="Script" path="res://scripts/autoload/AudioPlayer.gd" id="1_g31op"]
[ext_resource type="Script" path="res://scripts/snippets/SoundPlayerOneShot.gd" id="2_nvlsx"]

[node name="AudioPlayer" type="Node2D"]
script = ExtResource("1_g31op")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
bus = &"Music"

[node name="SoundPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
bus = &"Sound"

[node name="SoundPlayerOneShot" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
bus = &"Sound"
script = ExtResource("2_nvlsx")

[connection signal="finished" from="SoundPlayerOneShot" to="SoundPlayerOneShot" method="on_finished"]
